test/js/node/test/parallel/test-stream-drop-take.js.log.txt
18 | }());
19 | 
20 | {
21 |   // Synchronous streams
22 |   (async () => {
23 |     deepStrictEqual(await from([1, 2, 3]).drop(2).toArray(), [3]);
                                               ^
TypeError: undefined is not a function
      at drop (node:stream:55:20)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:23:43
      at asyncFunctionResume (1:11)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:22:4
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:29:61
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)
28 |     deepStrictEqual(await from([1, 2]).drop(0).toArray(), [1, 2]);
29 |     deepStrictEqual(await from([1, 2]).take(0).toArray(), []);
30 |   })().then(common.mustCall());
31 |   // Asynchronous streams
32 |   (async () => {
33 |     deepStrictEqual(await fromAsync([1, 2, 3]).drop(2).toArray(), [3]);
                               ^
TypeError: undefined is not a function
      at map (node:stream:55:20)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:33:27
      at asyncFunctionResume (1:11)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:32:4
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:39:66
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)
39 |     deepStrictEqual(await fromAsync([1, 2]).take(0).toArray(), []);
40 |   })().then(common.mustCall());
41 |   // Infinite streams
42 |   // Asynchronous streams
43 |   (async () => {
44 |     deepStrictEqual(await naturals().take(1).toArray(), [1]);
                                          ^
TypeError: undefined is not a function
      at take (node:stream:55:20)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:44:38
      at asyncFunctionResume (1:11)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:43:4
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:48:68
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)
61 |     await promise;
62 |     reached = true;
63 |     yield 2;
64 |   })());
65 | 
66 |   stream.take(1)
              ^
TypeError: undefined is not a function
      at take (node:stream:55:20)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-drop-take.js:66:10
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
      at promiseReactionJob (1:11)

Bun v1.1.31-debug+5fc53353f (macOS arm64)
